code refactor and api docs update
